FIX: Align css to reflect AA Times Phase 4 project requirements

--- a/stylesheets/components/main-content.css
+++ b/stylesheets/components/main-content.css
@@ -1,1 +1,175 @@
 /* Your code here */
+main {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    /* grid-template-rows: repeat(12, 1fr); */
+    grid-template-rows: repeat(12, 5rem);
+    box-sizing: border-box;
+}
+
+main .article{
+    grid-area: 1/1/7/10;
+    border-bottom: 2px solid black;
+}
+main .article article {
+    display: grid;
+    grid-template-columns: 1fr 1.66fr;
+    grid-template-rows: 1fr 7fr;
+    /* background-color: red; */
+    height: 100%; width: 100%;
+    gap: 1rem;
+}
+main .article h1 {
+    grid-area: 1/1/2/-1;
+    width: 100%;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    font-style: italic;
+}
+main .article h2 {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+    font-style: italic;
+}
+main .article div:first-of-type p:first-of-type {
+    color: grey;
+    padding-top: 2rem;
+}
+main .article ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+li {
+    padding: 1rem 0;
+    font-size: 12px;
+}
+.article > p {
+    color: blue;
+}
+.article .iframe {
+    /* background-color: orange; */
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+main .second {
+    grid-area: 7/1/11/10;
+    /* background-color: lightblue; */
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    height: fit-content;
+}
+main .second h1 {
+    font-size: 1.5rem;
+    padding: 0;
+    color: black;
+}
+main .second h2 {
+    font-size: 1rem;
+}
+main .second .article {
+    border: none;
+}
+main .second article {
+    padding: 1rem;
+}
+main .second article:first-of-type {
+    width: 120%;
+}
+header.article__header {
+    padding: 0;
+}
+article.article > p {
+    color: black;
+    font-size: 12px;
+}
+h2.article__byline {
+    margin: 0.5rem 0;
+    color: #6f6f6f;
+    font-style: initial;
+}
+.article__author {
+    text-transform: uppercase;
+}
+main .third {
+    grid-area: 1/10/-1/-1;
+    border-left: 1px solid #e2e2e2;
+    padding-left: 1rem;
+    /* background-color: pink; */
+}
+aside {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    gap: 1rem;
+    padding: 1rem 0;
+    border-bottom: 1px solid #e2e2e2;
+}
+aside h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    padding-top: 1rem;
+}
+aside > p:first-of-type {
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+aside > p:last-of-type,
+aside > span:last-of-type {
+    font-size: 12px;
+}
+aside > span:last-of-type {
+    font-weight: 600;
+}
+aside .new-office {
+    height: 6rem;
+}
+img {
+    height: 100%;
+    width: 100%;
+}
+
+.more-news {
+    /* background-color: red; */
+    display: flex;
+    flex-wrap: column no-wrap;
+    text-transform: capitalize;
+    font-size: 12px;
+    padding: 0.4rem 1rem;
+    gap: 5px;
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* grid-template-rows: repeat(12, 1fr); */
+    /* grid-auto-rows: 1fr 2fr; */
+    /* gap: 11px; */
+}
+.more-news > div {
+    box-sizing: border-box;
+    /* flex-basis: 49%; */
+    /* width: 49%; */
+    /* padding: 0.4rem 1rem; */
+}
+/* .more-news div { */
+/*     border: 1px solid black; */
+/* } */
+
+.larger-articles, .smaller-articles {
+    display: flex;
+    flex-direction: column;
+    & > div {
+	padding: 12px 0;
+	font-weight: 600;
+	font-size: 14px;
+    }
+}
+.larger-articles div {
+    height: 140%;
+}
+
+.more-news span {
+    display: block;
+    color: #e2e2e2;
+    margin-bottom: 0.5rem;
+}
